Fix floating NavMenu for commit messages too long

--- a/app/repos/[repositoryName]/commits/[commitSha]/NavMenu/NavMenu.module.scss
+++ b/app/repos/[repositoryName]/commits/[commitSha]/NavMenu/NavMenu.module.scss
@@ -9,5 +9,5 @@
   position: absolute;
   z-index: 9;
   align-self: center;
-  top: 86px;
+  bottom: -25px;
 }
